syntax = "proto3";

package relayer;

service Relay {
    rpc Sync (SyncRequest) returns (stream SyncResponse);
}

message SyncRequest {
    bytes signature = 1;
    string address = 2;
}

message SyncResponse {
    bytes signature = 1;
    OrderbookEntry entry = 3;
}

message OrderbookEntry {
    Order order = 1;
    OrderStatus orderStatus = 2;
}

message Order {
    bytes orderId = 1;
    int64 expiry = 2;
    int32 type = 3;
    int32 tokens = 4;
}

enum OrderStatus {
    Open = 0;
    Canceled = 1;
    Unconfirmed = 2;
    Confirmed = 3;
    Settled = 4;
}